fixed contact page header margin on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -487,7 +487,7 @@ footer {
     }
     .navbar-nav span {
     display: none;
-    }  
+    }
 }
 
 @media (max-width: 440px) {
@@ -549,6 +549,9 @@ footer {
     margin-top: 3px;
     color: #4e4e4e;
     }
+    #contact-header-container {
+        margin-top: 185px;
+    }
 }
 
 @media (max-width: 992px) {
@@ -589,6 +592,9 @@ footer {
     padding-top: 10px;
     z-index: 2;
     margin-top: 140px;
-}
+    }
+    #contact-header-container {
+    margin-top: 155px;
+    }
 }
 
